--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>bepicky</groupId>
     <artifactId>common-pom</artifactId>
-    <version>2.1</version>
+    <version>2.2</version>
     <packaging>pom</packaging>
 
     <name>common-pom</name>
@@ -127,7 +127,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
                     <configuration>
-                        <release>11</release>
+                        <source>11</source>
+                        <target>11</target>
                     </configuration>
                 </plugin>
 
