--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>bepicky</groupId>
     <artifactId>common-pom</artifactId>
-    <version>2.2</version>
+    <version>2.3</version>
     <packaging>pom</packaging>
 
     <name>common-pom</name>
@@ -14,10 +14,10 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <camel.version>2.25.1</camel.version>
-        <spring-boot.version>2.2.2.RELEASE</spring-boot.version>
+        <spring-boot.version>2.5.4</spring-boot.version>
         <lombok.version>1.18.12</lombok.version>
-        <spring-cloud.version>2.2.2.RELEASE</spring-cloud.version>
-        <spring-cloud-dependecies.version>Hoxton.SR6</spring-cloud-dependecies.version>
+        <spring-cloud.version>2.2.8.RELEASE</spring-cloud.version>
+        <spring-cloud-dependecies.version>Hoxton.SR12</spring-cloud-dependecies.version>
         <java.version>15</java.version>
     </properties>
 
