--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>bepicky</groupId>
     <artifactId>common-pom</artifactId>
-    <version>2.9</version>
+    <version>2.10</version>
     <packaging>pom</packaging>
 
     <name>common-pom</name>
@@ -101,7 +101,11 @@
                 <version>1.4.200</version>
                 <scope>test</scope>
             </dependency>
-
+            <dependency>
+                <groupId>io.nats</groupId>
+                <artifactId>jnats</artifactId>
+                <version>2.11.5</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
